--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "test": "lerna run test --scope={common,server}",
-    "new-version": "lerna version --conventional-commits --yes",
+    "new-version": "lerna version --conventional-commits",
     "diff": "lerna diff"
   },
   "devDependencies": {
