feat: add commit lint

--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
     "new-version": "lerna version --conventional-commits",
     "diff": "lerna diff"
   },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint - E HUSKY_GIT_PARAMS"
+    }
+  },
   "devDependencies": {
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
+    "husky": "^4.3.0",
     "lerna": "^3.22.1"
   }
 }
