--- a/package.json
+++ b/package.json
@@ -11,13 +11,25 @@
   },
   "husky": {
     "hooks": {
+      "pre-commit": "lint-staged",
       "commit-msg": "commitlint - E HUSKY_GIT_PARAMS"
     }
+  },
+  "lint-staged": {
+    "packages/common/**/*.js": [
+      "lerna run --scope common lint -- --fix",
+      "git add"
+    ],
+    "packages/server/**/*.js": [
+      "lerna run --scope server lint -- --fix",
+      "git add"
+    ]
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "husky": "^4.3.0",
-    "lerna": "^3.22.1"
+    "lerna": "^3.22.1",
+    "lint-staged": "^10.5.1"
   }
 }
