--- a/lerna.json
+++ b/lerna.json
@@ -4,5 +4,14 @@
   ],
   "npmClient": "npm",
   "useWorkspaces": true,
-  "version": "1.1.0"
+  "version": "1.1.0",
+  "command": {
+    "version": {
+      "allowBranch": ["master"],
+      "message": "chore(release): publish %s",
+      "ignoreChanges": [
+        "**/*.md"
+      ]
+    }
+  }
 }
