--- a/lerna.json
+++ b/lerna.json
@@ -4,10 +4,12 @@
   ],
   "npmClient": "npm",
   "useWorkspaces": true,
-  "version": "1.1.0",
+  "version": "1.1.1",
   "command": {
     "version": {
-      "allowBranch": ["master"],
+      "allowBranch": [
+        "master"
+      ],
       "message": "chore(release): publish %s",
       "ignoreChanges": [
         "**/*.md"
