--- a/lerna.json
+++ b/lerna.json
@@ -4,7 +4,7 @@
   ],
   "npmClient": "npm",
   "useWorkspaces": true,
-  "version": "1.1.2",
+  "version": "1.1.3-alpha.0",
   "command": {
     "version": {
       "allowBranch": [
