--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "server",
-  "version": "1.1.3-alpha.0",
+  "version": "1.1.3-beta.0",
   "description": "",
   "main": "index.js",
   "scripts": {
