--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "common",
-  "version": "1.1.3-beta.1",
+  "version": "1.1.4",
   "description": "",
   "main": "index.js",
   "scripts": {
